--- a/index.html
+++ b/index.html
@@ -61,77 +61,113 @@
       </section>
 
       <section class="sec_be_productive">
-
         <p>Don't be busy, be productive</p>
 
         <div>
-              <section class="sec_be_ch1">
+          <section class="sec_be_ch1">
+            <div>
+              <div class=""><i class="fa-solid fa-laptop-code"></i></div>
+            </div>
 
-                  <div>
-                    <div class=""><i class="fa-solid fa-laptop-code"></i></div>
-                  </div>
+            <!-- <div> -->
+            <div>
+              <p>graphic design</p>
+              <p>
+                Graphic design is the process of visual communication and
+                problem-solving using one or more of typography, photography and
+                illustration.
+              </p>
+            </div>
+            <!-- </div> -->
 
-                  <!-- <div> -->
-                    <div>
-                      <p>graphic design</p>
-                      <p>
-                        Graphic design is the process of visual communication and
-                        problem-solving using one or more of typography, photography
-                        and illustration.
-                      </p>
-                    </div>
-                  <!-- </div> -->
+            <div>
+              <div class=""><i class="fa-solid fa-mug-saucer"></i></div>
+            </div>
 
-                  <div>
-                    <div class=""><i class="fa-solid fa-mug-saucer"></i></div>
-                  </div>
+            <!-- <div> -->
+            <div>
+              <p>Web design</p>
+              <p>
+                Web design encompasses many different skills and disciplines in
+                the production and maintenance of websites.
+              </p>
+            </div>
+            <!-- </div> -->
+          </section>
+          <section class="sec_be_ch2">
+            <div>
+              <div class=""><i class="fa-solid fa-network-wired"></i></div>
+            </div>
 
-                  <!-- <div> -->
-                    <div>
-                      <p>Web design</p>
-                      <p>
-                        Web design encompasses many different 
-                        skills and disciplines in the production 
-                        and maintenance of websites.
-                      </p>
-                    </div>
-                  <!-- </div> -->
+            <!-- <div> -->
+            <div>
+              <p>ui & ux</p>
+              <p>
+                Process of enhancing user satisfaction with a product by
+                improving the usability, accessibility, and pleasure provided in
+                the interaction.
+              </p>
+            </div>
+            <!-- </div> -->
 
-              </section>
-              <section class="sec_be_ch2">
-               
-                <div>
-                  <div class=""><i class="fa-solid fa-network-wired"></i></div>
-                </div>
+            <div>
+              <div class=""><i class="fa-solid fa-window-maximize"></i></div>
+            </div>
 
-                <!-- <div> -->
-                  <div>
-                    <p> ui & ux</p>
-                    <p>
-                      Process of enhancing user satisfaction 
-                      with a product by improving the 
-                      usability, accessibility, and pleasure 
-                      provided in the interaction.
-                    </p>
-                  </div>
-                <!-- </div> -->
+            <!-- <div> -->
+            <div>
+              <p>web development</p>
+              <p>
+                Web development is a broad term for the work involved in
+                developing a web site for the Internet or an intranet.
+              </p>
+            </div>
+            <!-- </div> -->
+          </section>
+        </div>
+      </section>
 
-                <div>
-                  <div class=""><i class="fa-solid fa-window-maximize"></i></div>
-                </div>
-
-                <!-- <div> -->
-                  <div>
-                    <p>web development</p>
-                    <p>
-                      Web development is a broad term for 
-                      the work involved in developing a web site 
-                      for the Internet or an intranet.
-                    </p>
-                  </div>
-                <!-- </div> -->
-
-              </section>
+      <section class="proj_photo">
+        <div>
+          <p>Don't be busy, be productive</p>
+        </div>
+        <div class="">
+          <section class="proj_ch1">
+            <div class="">
+              <div class="proj_im1"></div>
+              <div>
+                <p>Project Here</p>
+                <p>
+                  My creative ability is very difficult to measure because it
+                  can manifest in so many surprising and.
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="proj_ch1">
+            <div>
+              <div class="proj_im2"></div>
+              <div>
+                <p>Project Here</p>
+                <p>
+                  My creative ability is very difficult to measure because it
+                  can manifest in so many surprising and.
+                </p>
+              </div>
+            </div>
+          </section>
+          <section class="proj_ch1">
+            <div>
+              <div class="proj_im3"></div>
+              <div>
+                <p>Project Here</p>
+                <p>
+                  My creative ability is very difficult to measure because it
+                  can manifest in so many surprising and.
+                </p>
+              </div>
+            </div>
+          </section>
         </div>
       </section>
     </section>
